--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -13,6 +13,39 @@ img {
   //@include w-100;
 }
 
+// skip to #main link
+
+.skip-link {
+  background-color: $ca-blue;
+  color: #FFF;
+  display: flex;
+  justify-content: center;
+  font-size: 1.5em;
+  line-height: 1;
+  max-height: 0;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: .3s ease;
+  width: 100%;
+  z-index: 1001;
+  @media (min-width: $break-640) {
+    //position: absolute;
+  }
+}
+
+a.skip-link:focus {
+  box-shadow: none;
+  color: #FFF;
+  max-height: 10rem;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  text-decoration-skip: ink;
+  //transition: .3s ease;
+}
+
 .site-wrapper {
   @include flex;
   @include flex-d-col;
