--- a/css/modifiers.css
+++ b/css/modifiers.css
@@ -237,10 +237,20 @@
     height: 0;
     opacity: 0;
     padding: 0; }
-  100% {
+  6% {
     height: 4em;
     opacity: 1;
-    padding: .25em 1em; } }
+    padding: .25em 1em; }
+  93% {
+    height: 4em;
+    opacity: 1;
+    padding: .25em 1em; }
+  96% {
+    height: 4.5em; }
+  100% {
+    height: 0;
+    opacity: 0;
+    padding: 0; } }
 
 .MontserratLight {
   -webkit-font-smoothing: auto;
