--- a/scss/modules/_site-header.scss
+++ b/scss/modules/_site-header.scss
@@ -2,6 +2,7 @@
 
 .site-header {
   background-color: rgba(#000, .9);
+  position: relative;
   &.headroom--not-top {
     background-color: rgba(black, .9);
   }
@@ -12,6 +13,7 @@
 
 .headroom {
   //will-change: transform;
+  position: fixed;
   transition: opacity .3s ease;
 }
 .headroom--pinned {
