--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -346,10 +346,25 @@
     opacity: 0;
     padding: 0;
   }
-  100% {
+  6% {
     height: 4em;
     opacity: 1;
     padding: .25em 1em;
+  }
+  93% {
+    height: 4em;
+    opacity: 1;
+    padding: .25em 1em;
+  }
+  96% {
+    height: 4.5em;
+    //opacity: 1;
+    //padding: .3em 1em;
+  }
+  100% {
+    height: 0;
+    opacity: 0;
+    padding: 0;
   }
 }
 
@@ -408,10 +423,11 @@
     opacity: 0;
     height: 0;
     text-align: center;
+    will-change: height;
     width: 100%;
     z-index: 10000;
     // animation
-    animation: fade .5s ease 1;
+    animation: fade 7s ease 1;
     animation-fill-mode: forwards;
     animation-delay: 2.5s;
   }
