--- a/scss/templates/_page-content.scss
+++ b/scss/templates/_page-content.scss
@@ -4,7 +4,7 @@
   > .container {
     
   }
-  > .container:not([class*="grid-"]) {
+  > .container {
     //@include pt-3;
     //@include pb-2;
     max-width: 85em;
