--- a/scss/utilities/mixins/_css-grid.scss
+++ b/scss/utilities/mixins/_css-grid.scss
@@ -4,7 +4,7 @@
   @include flex;
   @include flex-wrap;
   //padding: 0 !important;
-  @include mw-100p;
+  //@include mw-100p;
   > * {
     @include flex-grow-1;
     @include p-1;
@@ -25,7 +25,7 @@
 @mixin grid-2-col {
   @include grid;
   @supports (grid-gap: 0) {
-    grid-template-columns: repeat(auto-fit, minmax(26em, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
     grid-gap: 3em;
   }
 }
