--- a/scss/utilities/mixins/_css-grid.scss
+++ b/scss/utilities/mixins/_css-grid.scss
@@ -3,7 +3,7 @@
 @mixin grid {
   @include flex;
   @include flex-wrap;
-  //padding: 0 !important;
+  @include pb-2;
   //@include mw-100p;
   > * {
     @include flex-grow-1;
@@ -13,8 +13,10 @@
 
   @supports (grid-gap: 0) {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr));
-    grid-gap: 1em;
+    grid-gap: 2em;
+    @media (min-width: $break-640) {
+      grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr));  
+    }
     > * {
       @include p-0;
     }
@@ -25,8 +27,10 @@
 @mixin grid-2-col {
   @include grid;
   @supports (grid-gap: 0) {
-    grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-    grid-gap: 3em;
+    @media (min-width: $break-640) {
+      grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
+      grid-gap: 3em;
+    }
   }
 }
 
