--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,6 +12,7 @@
 @import "elements/buttons";
 //@import "elements/tabs";
 @import "elements/media-item";
+@import "elements/logo";
 
 // Components
 @import "components/forms";
