--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -12,9 +12,9 @@
       -ms-user-select: none;
           user-select: none;
   border: 1px solid transparent;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  border-radius: 0.25rem;
+  padding: 0.5em 1em;
+  font-size: 1em;
+  border-radius: 0.25em;
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -25,8 +25,8 @@
 }
 
 @mixin button-lg {
-  padding: 0.75rem 1.5rem;
-  font-size: 1.25rem;
+  padding: 0.75em 1.5em;
+  font-size: 1.25em;
 }
 
 @mixin button-xl {
@@ -166,8 +166,8 @@ fieldset[disabled] a.btn {
 }
 
 .btn-sm, .btn-group-sm > .btn {
-  padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  padding: .25em 0.5em;
+  font-size: .875em;
 }
 
 .btn-block {
@@ -176,7 +176,7 @@ fieldset[disabled] a.btn {
 }
 
 .btn-block + .btn-block {
-  margin-top: 0.5rem;
+  margin-top: .5em;
 }
 
 input[type="submit"].btn-block,
@@ -215,6 +215,7 @@ input[type="button"].btn-block {
 }
 
 .btn-text {
+  @include bg-trans;
   color: $ca-blue;
   @include p-0;
   white-space: normal;
