--- a/scss/utilities/mixins/_backgrounds.scss
+++ b/scss/utilities/mixins/_backgrounds.scss
@@ -46,10 +46,11 @@
   .container {
     padding-right: calc(1vw + 2em);
     padding-left: calc(1vw + 2em);
+    @include mw-48em;
   }
 
   .h1, h1 {
-    font-size: 2.875em;
+    font-size: 2.25em;
     //font-size: 4vmax;
     @include mb-sm;
   }
@@ -58,7 +59,7 @@
     @include mw-40em;
     @include mr-ml-a;
     @include mb-2;
-    @include text-md;
+    @include text-sm;
   }
 
   .btn {
