main-menu layout styles

--- a/scss/modules/_site-header.scss
+++ b/scss/modules/_site-header.scss
@@ -1,7 +1,7 @@
 // Site Header
 
 .site-header {
-  background-color: rgba(#000, .9);
+  //background-color: rgba(#000, .9);
   position: relative;
   &.headroom--not-top {
     background-color: rgba(black, .9);
