--- a/scss/components/navigation/_navigation.scss
+++ b/scss/components/navigation/_navigation.scss
@@ -10,7 +10,7 @@
 }
 
 .navbar-collapse {
-  margin: 0 -15px;
+  //margin: 0 -15px;
   @include p-1;
   &.show {
 
@@ -39,7 +39,7 @@
   .navbar-inverse & {
     border: none;
     .icon {
-      fill: #ddd;
+      //fill: #ddd;
     }
   }
   .icon {
@@ -170,6 +170,9 @@ $box-size: 40px;
     height: 100%;
     @include w-100;
   }
+  @media (min-width: $break-992) {
+    @include p-0;
+  }
 }
 
 .nav-list {
@@ -190,12 +193,16 @@ $box-size: 40px;
 
 .navbar-inverse .navbar-nav .nav-link {
   color: #DDD;
+  text-shadow: 0 0 .25rem rgba(black, .5);
 }
 
 .nav-item {
   @media (min-width: $break-992) {
-    @include ml-1;
+    @include ml-tiny;
     @include mb-0;
+  }
+  @media (min-width: $break-1200) {
+    @include ml-1;
   }
 }
 
@@ -209,26 +216,62 @@ $box-size: 40px;
 
 @media (min-width: $break-992) {
   .navbar-toggleable-md {
-
+    @include pt-1;
     > .container {
       @include flex;
       flex-wrap: nowrap;
       @include ai-center;
       @include jc-between;
+      @include pr-0;
     }
     .navbar-collapse {
-      width: auto;
+      @include jc-between;
+      @include p-0;
+      @include w-100;
     }
-
+    .navbar-nav {
+      @include ai-center;
+      @include jc-between;
+      &.login-nav {
+        @include flex-d-row-rev;
+      }
+    }
   }
 
 
   .login-nav {
-    position: absolute;
-    top: -.25em;
-    right: 1em; 
+    //@include theme-black;
+    @include flex;
+    @include flex-d-row-rev;
+    @include jc-end;
+    @include ml-tiny;
+    // position: absolute;
+    // top: -1em;
+    // right: 1em;
+    & > li {
+      @include mr-0;
+      @include ml-0;
+      &.search-button {
+        @include flex;
+        @include ai-center;
+        @include mr-sm;
+        @include ml-sm;
+      }
+    }
     &.navbar-nav .nav-link {
-      @include p-0;
+      font-size: .75rem;
+      letter-spacing: .03rem;
+    }
+    &.navbar-nav {
+      .nav-link {
+        @include theme-blue;
+        @include pt-pb-sm;
+        @include pr-pl-1;
+        @include all-caps;
+      }
+      .login-link {        
+        background-color: $ca-blue-dark;
+      }
     }
   }
 
