--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -20,7 +20,7 @@ img {
 
 .skip-link,
 #skip-to-content {
-  background-color: $ca-blue;
+  background-color: $max-blue;
   color: #FFF;
   display: flex;
   justify-content: center;
