--- a/scss/components/_modals.scss
+++ b/scss/components/_modals.scss
@@ -13,7 +13,7 @@
   }
   .close {
     background-color: rgba(black, 0);
-    color: $ca-white;
+    color: $max-white;
     @include p-1;
     opacity: 0.5;
     @include text-xl;
