--- a/scss/modules/_site-header.scss
+++ b/scss/modules/_site-header.scss
@@ -2,7 +2,7 @@
 
 .site-header {
   //background-color: rgba(#000, .9);
-  position: relative;
+  //position: relative;
   &.headroom--not-top {
     background-color: rgba(black, .9);
   }
