--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -413,7 +413,7 @@
     // Subtle Message
     content: "Please enable JavaScript for a better user experience. Thank you!";
     color: #FFF;
-    background: $ca-red;
+    background: $max-red;
     font-weight: normal;    
     display: flex;
     align-items: center;
