--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -7,25 +7,23 @@
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  border: 1px solid transparent;
-  padding: 0.5em 1em;
+  user-select: none;
+  border: .2em solid transparent;
+  padding: .5em 1em;
   font-size: 1em;
-  border-radius: 0.25em;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+  border-radius: .25em;
+  transition: all .2s ease-in-out;
   // custom
   @include MontserratLight;
   letter-spacing: .05em;
   text-shadow: none;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 @mixin button-lg {
-  padding: 0.75em 1.5em;
+  padding: .75em 1.5em;
   font-size: 1.25em;
 }
 
@@ -75,7 +73,7 @@
 
 @mixin button-outline {
   background-color: transparent;
-  border: 1px solid currentColor;  
+  border: .2em solid currentColor;  
   text-align: center;
 
   &:hover,
@@ -103,6 +101,10 @@
   > .icon-outline {
     @include mr-sm;
   }
+}
+
+@mixin button-text {
+
 }
 
 // class modifiers
