--- a/scss/modules/_site-header.scss
+++ b/scss/modules/_site-header.scss
@@ -3,25 +3,31 @@
 .site-header {
   //background-color: rgba(#000, .9);
   //position: relative;
+  transition: background-color .4s ease;
   &.headroom--not-top {
     background-color: rgba(black, .9);
+    .navbar-collapse {
+      background-color: transparent;
+    }
   }
   @supports (grid-gap: 0) {
     grid-row: span 1;
   }
 }
 
-.headroom {
-  //will-change: transform;
-  position: fixed;
-  transition: opacity .3s ease;
-}
-.headroom--pinned {
-  //transform: translateY(0%);
-  opacity: 1;
-}
+@media (min-width: $break-992) {
+  .headroom {
+    //will-change: transform;
+    position: fixed;
+    transition: opacity .3s ease;
+  }
+  .headroom--pinned {
+    //transform: translateY(0%);
+    opacity: 1;
+  }
 
-.headroom--unpinned {
-  //transform: translateY(-100%);
-  opacity: 0;
+  .headroom--unpinned {
+    //transform: translateY(-100%);
+    opacity: 0;
+  }
 }
