--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,7 +10,7 @@
 // Elements
 @import "elements/icons";
 @import "elements/buttons";
-//@import "elements/tabs";
+@import "elements/images";
 @import "elements/media-item";
 @import "elements/logo";
 
