--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -34,13 +34,13 @@
 @mixin button-primary {
 
   color: #fff;
-  background-color: #0275d8;
-  border-color: #0275d8;
+  background-color: $link;
+  border-color: $link;
 
   &:hover {
     color: #fff;
-    background-color: #025aa5;
-    border-color: #01549b;
+    background-color: $max-blue;
+    border-color: $max-blue;
   }
 
   &:focus, &.focus {
@@ -61,8 +61,8 @@
   }
 
   // custom
-  background-color: $max-blue;
-  border-color: $max-blue;
+  // background-color: $max-blue;
+  // border-color: $max-blue;
   &:hover,
   &:focus {
     background-color: $max-blue-dark;
@@ -127,9 +127,8 @@
 }
 
 .btn:focus, .btn.focus {
+  box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
   outline: 0;
-  -webkit-box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
-          box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -147,9 +146,9 @@ fieldset[disabled] a.btn {
 }
 
 .btn-secondary {
-  color: #292b2c;
-  background-color: #fff;
-  border-color: #ccc;
+  color: $text-color;
+  background-color: $max-white;
+  border-color: #DDD;
 }
 
 .btn-secondary:hover {
