--- a/scss/utilities/modifiers/_mod-backgrounds.scss
+++ b/scss/utilities/modifiers/_mod-backgrounds.scss
@@ -20,19 +20,45 @@
     background-image: url(../images/bg/bg-hero-app-user-01.jpg);
   }
 
+  &-app-user-02 {
+    background-image: url(../images/bg/bg-hero-app-user-02.jpg);
+  }
+
   &-user-01 {
     background-image: url(../images/bg/bg-hero-user-man.jpg);
   }
 
+  @include filter-luminosity;
+
 }
 
-.bg-half-globe-left {
+.bg-dash-user {
   @include bg-cover;
-  background-image: url(../images/bg/bg-banner-half-globe-darkgreen.jpg);
+  background-image: url(../images/bg/bg-hero-dash-user-01.jpg);
+}
+
+.bg-dash-user-purple {
+  @include bg-cover;
+  background-image: url(../images/bg/bg-hero-dash-user-01-blue-purple.jpg);
+}
+
+.bg-app-user-04-orange {
+  @include bg-cover;
+  background-image: url(../images/bg/bg-hero-app-user-04-orange.jpg);
 }
 
 .bg-analytics {
   @include bg-cover;
   background-image: url(../images/bg/bg-analytics-darkblue.jpg);
+}
+
+.bg-app-user-light {
+  //@include bg-cover;
+  background-image: url(../images/bg/bg-hero-app-user-03-bg-white.jpg);
+}
+
+.bg-cogs-light {
+  background-color: $max-white;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='300' viewBox='0 0 100 100'%3E%3Cg fill='%23c9c4d2' fill-opacity='0.08'%3E%3Cpath fill-rule='evenodd' d='M11 0l5 20H6l5-20zm42 31a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM0 72h40v4H0v-4zm0-8h31v4H0v-4zm20-16h20v4H20v-4zM0 56h40v4H0v-4zm63-25a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM53 41a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-30 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-28-8a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zM56 5a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zm-3 46a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM21 0l5 20H16l5-20zm43 64v-4h-4v4h-4v4h4v4h4v-4h4v-4h-4zM36 13h4v4h-4v-4zm4 4h4v4h-4v-4zm-4 4h4v4h-4v-4zm8-8h4v4h-4v-4z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
