--- a/css/modifiers.css
+++ b/css/modifiers.css
@@ -31,7 +31,7 @@
   @supports (grid-gap: 0) {
     .grid {
       display: grid;
-      grid-gap: 2em; }
+      grid-gap: 3em; }
       @media (min-width: 40em) {
         .grid {
           grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr)); } }
@@ -49,7 +49,7 @@
   @supports (grid-gap: 0) {
     .grid-2-col {
       display: grid;
-      grid-gap: 2em; }
+      grid-gap: 3em; }
       @media (min-width: 40em) {
         .grid-2-col {
           grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr)); } }
@@ -58,8 +58,7 @@
   @supports (grid-gap: 0) {
     @media (min-width: 40em) {
       .grid-2-col {
-        grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-        grid-gap: 3em; } } }
+        grid-template-columns: repeat(auto-fit, minmax(25em, 1fr)); } } }
 
 .grid-4-col {
   display: flex;
@@ -72,7 +71,7 @@
   @supports (grid-gap: 0) {
     .grid-4-col {
       display: grid;
-      grid-gap: 2em; }
+      grid-gap: 3em; }
       @media (min-width: 40em) {
         .grid-4-col {
           grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr)); } }
