--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -27,11 +27,24 @@ h6,.h6 {
   color: currentColor;
   @include Montserrat;
   line-height: 1.35;
+  @include mb-1-pt5;
   transition: opacity .2s;
 }
 
 .h1,h1 {
-  @include mb-1-pt5;
+  font-size: 3.5em;
+}
+
+.h2,h2 {
+  font-size: 2.75em;
+}
+
+.h3,h3 {
+  font-size: 2em;
+}
+
+.h4,h4 {
+  flex: 1.875em;
 }
 
 a {
