--- a/scss/modules/_features.scss
+++ b/scss/modules/_features.scss
@@ -1,23 +1,20 @@
 .features {
-  //padding-top: 2em;
-  //padding-bottom: 2em;
-
-  .icon-box-icon {
-    font-size: 1rem;
-    margin-bottom: .75rem;
-  }
-
-  [class^="icon-"]:before, [class*=" icon-"]:before {
-    font-size: 6rem;
-  }
-
+  
 }
 
-.icon-box-title h3 {
-  @include text-lg;
-  font-weight: normal;
+.feature {
+  @include mb-2;
 }
 
-.icon-box-link {
-  color: $link-color;
+#home-features {
+  @media (max-width: $break-900) {
+    > .container {
+      @include p-2;
+    }
+  }
+  @media (min-width: $break-900) {
+    .grid-wrap {
+      @include grid;
+    }
+  }
 }
