--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,7 +27,7 @@
 // Modules
 @import "modules/site-header";
 @import "modules/footer";
-//@import "modules/features";
+@import "modules/features";
 
 // Templates
 @import "templates/page-content";
